add random number

--- a/index.html
+++ b/index.html
@@ -50,23 +50,23 @@
             <div class="ticket">
                 <h4>DETTAGLIO PASSEGERO</h4>
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-4 back">
                         <h3>Nome Passeggero</h3>
-                        <span id="passenger_name"></span>
+                        <strong id="passenger_name"></strong>
                     </div>
-                    <div class="col-2">
+                    <div class="col-2 offert">
                         <strong>Offerta</strong>
-                        <div>Biglietto standard</div>
+                        <div id="ticket_type"></div>
                     </div>
-                    <div class="col-2">
+                    <div class="col-2 carriage">
                         <strong>Carrozza</strong>
                         <div id="n_carriage"></div>
                     </div>
-                    <div class="col-2">
+                    <div class="col-2 code_name">
                         <strong>Codice</strong>
                         <div id="code"></div>
                     </div>
-                    <div class="col-2">
+                    <div class="col-2 ticket_pricename">
                         <strong>Costo biglietto</strong>
                         <div id="ticket_price"></div>
                     </div>
